# Practica-de-laboratorio-1-2-1-joker-

./: CMakeLists.txt  Employee  Employee.cpp  Employee.h  Project.cpp  Project.h  Resource  Resource.cpp  Resource.h  Task  Task.cpp  Task.h  WorkBreakDownStructure.cpp  WorkBreakDownStructure.h
