cmake_minimum_required(VERSION 3.23)
project(Practica_de_laboratorio_1_2_1_joker_)

set(CMAKE_CXX_STANDARD 14)

add_executable(Practica_de_laboratorio_1_2_1_joker_
        .idea/modules.xml
        .idea/Practica-de-laboratorio-1-2-1-joker-.iml
        .idea/vcs.xml
        .idea/workspace.xml
        )
